fixing layout issues

--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
+/*Global style*/
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,7 +8,12 @@
   font-family: "Lato", sans-serif;
 }
 
-/* Pages - will remove*/
+/*Main wrapper holding all items*/
+.wrapper{
+  display: flex;
+}
+
+/*Shell Pages - base styles*/
 .dashboard,
 .shop,
 .tasks,
@@ -20,6 +26,7 @@
   color: #000000;
 }
 
+
 /* Navbar CSS */
 .nav-menu {
   background-color: #ffffff;
@@ -27,7 +34,7 @@
   width: 10%;
   min-width: 200px;
   position: fixed;
-  top: 0;
+  top: 50px;
   left: 0;
   /* background-color: #8CB369; */
   background-color: #5cb38e;
@@ -65,6 +72,114 @@
   width: 100%;
 }
 
+
 span {
   margin-left: 16px;
+}
+
+
+/* Add a black background color to the top navigation */
+.topnav {
+  top: 0;
+  height: 50px;
+  background-color: #ffffff;
+  display: flex;
+  overflow: hidden;
+}
+.topnav .logo-img{
+  padding-left: 1%;
+  left: 45px;
+  height: 50px;
+}
+
+.topnav .search-box{
+  width: 600px;
+  background-color: #ffffff;
+
+  border-radius:  5px;
+  margin:  10px auto 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-box .row {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.search-box input{
+  flex: 1;
+  height: 50px;
+  background: transparent;
+  border: 0;
+  outline: 0;
+  font-size: 18;
+  color: #333;
+}
+
+button{
+  background: transparent;
+  border: 0;
+  outline: 0;
+}
+
+.fa-solid{
+  width: 25px;
+  height: 25px;
+  color: #555;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add an active class to highlight the current page */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+  display: none;
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
